# numba

./: '  .binstar.yml  .coveragerc  .envrc  .flake8  .gitattributes  .gitignore  .gitmodules  .jenkins  .jenkins.bat  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGE_LOG  CONTRIBUTING.md  HowTo.rst  LICENSES.third-party  MANIFEST.in  Numba annotate.ipynb  README  README.md  README.rst  RELEASE_NOTES  RUMBA_MIGRATION_PLAN.md  SECURITY.md  __init__.py  a.py  appveyor.yml  azure-macos.yml  azure-pipelines.yml  azure-template.yml  azure-windows-py27.yml  azure-windows.yml  branch.diff  build.py  build_for_conda.sh  build_for_develop.sh  chk.py  (+97 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
analysis/: commands.sh  data.xlsx  reg.py
bench/: cygufunc.pyx  gufunc.py  profutils.py  quatfun.py  ufuncs.py
benchmark/: cuda_reduction.py
benchmarks/: README  bm_euler.py  bm_laplace2d.py  runall.py
buildscripts/: README.md  remove_unwanted_files.py
contrib/: einsum_gen.py  valgrind-numba.supp
cuda_includes/: cusparse.h
cuda_toolkit/: README  cuda.h
cudalib/: build.py
rumba/: .gitignore  Cargo.toml  README.md  pyproject.toml
rumba/examples/: compare_python_numba_rumba.py  compare_python_numba_rumba_2.py
rumba/src/: api.rs  artifact.rs  cache.rs  compile.rs  dispatcher.rs  errors.rs  ir.rs  lib.rs  runtime.rs  types.rs
rumba/src/codegen/: c.rs  mod.rs
rumba/src/frontend/: bytecode.rs  mod.rs  python_ast.rs
rumba/tests/: test_api.py  test_bytecode_frontend.py  test_codegen.py  test_equivalence.py
(+4559 files in other folders)
